# everlib

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.py  tox.ini
docs/: index.md
everlib/: __main__.py  cli.py
